--- a/app/views/stocks/_lookup.html.erb
+++ b/app/views/stocks/_lookup.html.erb
@@ -2,7 +2,7 @@
     <h3>Search for Stocks</h3>
     <%= form_tag search_stocks_path, remote: true, method: :get, id: 'stock-lookup-form' do %>
         <div class="form-group row no-padding text-center col-md-12">
-            <div class="col-md-10">
+            <div class="col-md-10" style="margin-bottom: 15px;">
                 <%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symble", autofocus: true,
                                                                         class: "form-control search-box input-lg" %>
             </div>
@@ -20,6 +20,20 @@
             <strong>Symbol:</strong> <%= @stock.ticker %>
             <strong>Name:</strong> <%= @stock.name %>
             <strong>Price:</strong> <%= @stock.price %>
+            <% if current_user.can_add_stock?(@stock.ticker) %>
+                <%= link_to "Add to my portfolio", user_stocks_path(user: current_user, stock_ticker: @stock.ticker, stock_id: @stock.id ? @stock.id : ""),
+                    class: "btn btn-xs btn-primary", method: :post %>
+            <% else %>
+                <span class="label label-default">
+                    Stock can not be added because you have already added 
+                    <% if !current_user.under_stock_limit? %>
+                        10 stocks.
+                    <% end %>
+                    <% if current_user.stock_already_added?(@stock.ticker) %>
+                        this stock.
+                    <% end %>
+                </span>
+            <% end %>
         </div>
     <% end %>
     <div id="stock-lookup-errors"></div>
