--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,7 +11,7 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav col-md-6">
             <li><%= link_to "My Portfolio", my_portfolio_path %></li>
-            <li><%= link_to "My Profile", edit_user_registration_path(current_user)  %></li>
+            <li><%= link_to "My Profile", edit_user_registration_path  %></li>
             <li><%= link_to "My Friends", my_friends_path  %></li>
           </ul>
           <ul class="nav navbar-right col-md-4">
