--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,14 @@
-<h2><%= @user.full_name %>'s Stock Tracking:</h2>
-<%= render 'stocks/list' %>
+<h2>User Details</h2>
+
+<dl class="dl-horizontal">
+    <dt><strong>Full name</strong></dt>
+    <dd><%= @user.full_name %></dd>
+    <dt><strong>Email</strong></dt>
+    <dd><%= @user.email %></dd>
+</dl>
+
+<% if @user.stocks.size > 0 %>
+    <%= render 'stocks/list' %>
+<% else %>
+    <p class="lead">This user isn't tracking any stocks.</p>
+<% end %>
