add chinese language

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,4 +32,8 @@
     .btn-danger:hover{
         background-color: darken(#d9534f, 20%) !important;
     }
+    
+    .locale {
+        padding-top:15px;
+    }
 }
