--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,7 +11,7 @@
       </div>
       <div class="form-group">
          <div class="col-md-6 no-padding">
-          <%= f.label :first_name %>
+          <%= f.label User.human_attribute_name(:first_name) %>
           <%= f.text_field :first_name, class: 'form-control' %>
          </div>
          <div class="col-md-6 no-padding left-padding">
