--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default navbar-static-top">
       <div class="container">
-        <%= link_to "Financial Tracker", root_path, class: "navbar-brand" %>
+        <%= link_to t(".app_name"), root_path, class: "navbar-brand" %>
         <% if current_user %>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
@@ -10,20 +10,35 @@
 
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav col-md-6">
-            <li><%= link_to "My Portfolio", my_portfolio_path %></li>
-            <li><%= link_to "My Profile", edit_user_registration_path  %></li>
-            <li><%= link_to "My Friends", my_friends_path  %></li>
+            <li><%= link_to t(".my_portfolio"), my_portfolio_path %></li>
+            <li><%= link_to t(".my_profile"), edit_user_registration_path  %></li>
+            <li><%= link_to t(".my_friends"), my_friends_path  %></li>
           </ul>
           <ul class="nav navbar-right col-md-4">
-            <li class="col-md-8 user-name text-right">
+            <li class="col-md-4 locale">
+              <div class="locale text-right">
+                <%= link_to_unless_current "Eng", locale: "en" %>
+                | <%= link_to_unless_current "中", locale: "zh-CN" %>
+              </div>
+            </li>
+            <li class="col-md-4 user-name text-right">
               <i class="fa fa-user"></i> <%= current_user.full_name.present? ? current_user.full_name : current_user.email %>
             </li>
             <li class="col-md-4 logout">
-              <%= link_to("logout", destroy_user_session_path,
+              <%= link_to(t(".logout"), destroy_user_session_path,
                           class: "btn btn-xs btn-danger", method: :delete) %>
             </li>
           </ul>
         </div>
+        <% else %>
+          <ul class="nav navbar-right col-md-4">
+            <li class="col-md-4 locale">
+              <div class="locale text-right">
+                <%= link_to_unless_current "Eng", locale: "en" %>
+                | <%= link_to_unless_current "中", locale: "zh-CN" %>
+              </div>
+            </li>
+          </ul>
         <% end %>
       </div>
 </div>
