--- a/app/views/shared/_spinner.html.erb
+++ b/app/views/shared/_spinner.html.erb
@@ -1,3 +1,3 @@
 <div id="spinner" class="row col-sm-12 text-center spinner" style="display: none;">
-    <i class="fa fa-spinner fa-spin fa-2x"></i> Processing...
+    <i class="fa fa-spinner fa-spin fa-2x"></i> <%= t(".searching") %>...
 </div>
