--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -1,4 +1,4 @@
-<h1>My Friends' Stock Tracking</h1>
+<h1><%= t('.title') %></h1>
 
 <%= render 'friends/lookup' %>
 <% if @friends.size > 0 %>
@@ -10,9 +10,9 @@
                 </th>
             </tr>
             <tr>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Actions</th>
+                <th><%= User.human_attribute_name(:full_name) %></th>
+                <th><%= User.human_attribute_name(:email) %></th>
+                <th><%= t('actions') %></th>
             </tr>
         </thead>
         <tbody>
@@ -21,12 +21,12 @@
                     <td><%= friend.full_name %></td>
                     <td><%= friend.email %></td>
                     <td>
-                        <%= link_to "View Details", user_path(friend),
+                        <%= link_to t("view"), user_path(friend),
                                                     class: "btn btn-xs btn-primary" %>&nbsp;
                             
-                        <%= link_to "Unfollow", friendship_path(friend), 
+                        <%= link_to t("unfollow"), friendship_path(friend), 
                                                     method: :delete, 
-                                                    data: {confirm: "Are you sure?"},
+                                                    data: {confirm: t("are_you_sure")},
                                                     class: "btn btn-xs btn-danger" %>
                     </td>
                 </tr>
@@ -35,6 +35,6 @@
     </table>
 <% else %>
     <div class="row col-lg-12">
-        <p class="lead">You don't have any friends yet. Please add some.</p>
+        <p class="lead"><%= t('.no_friends_yet') %></p>
     </div>
 <% end %>
